# FallGals

./: .gitignore  CMakeLists.txt  OVERVIEW.md  README.md
src/1-GameApp/: CMakeLists.txt
src/1-GameApp/GameApp/: Main.cpp
src/1-Tests/: CMakeLists.txt
src/1-Tests/Tests/: TestMain.cpp
src/1-Tests/Tests/Core/: EntityTests.hpp
src/2-Game/: CMakeLists.txt
src/2-Game/Game/: ChooseMapScene.cpp  ChooseMapScene.hpp  DebugCamera.cpp  DebugCamera.hpp  PlayMapScene.cpp  PlayMapScene.hpp
src/2-Game/Game/Character/: Character.cpp  Character.hpp  CharacterAssets.cpp  CharacterAssets.hpp  CharacterController.cpp  CharacterController.hpp
src/2-Game/Game/Map/: CannonBall.cpp  CannonBall.hpp  CanonObstacle.cpp  CanonObstacle.hpp  FinishLine.hpp  MapLoader.cpp  MapLoader.hpp  MapSegment.cpp  MapSegment.hpp  RotatingObstacle.cpp  RotatingObstacle.hpp
src/3-Core/: CMakeLists.txt
src/3-Core/Core/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  EntityGroup.hpp  GameController.cpp  GameController.hpp  GameTime.hpp  Physics.cpp  Physics.hpp  Renderer.cpp  Renderer.hpp  Rigidbody.cpp  Rigidbody.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp  WindowContext.cpp  WindowContext.hpp
src/3-Core/Core/Model/: AnimationClip.cpp  AnimationClip.hpp  Model.cpp  Model.hpp  ModelAnimator.cpp  ModelAnimator.hpp  ModelInstance.cpp  ModelInstance.hpp  ModelPose.cpp  ModelPose.hpp
src/4-Utility/: CMakeLists.txt
src/4-Utility/Utility/: CollisionShapes.cpp  CollisionShapes.hpp  Math.cpp  Math.hpp  MeshShapes.cpp  MeshShapes.hpp
